# hackfest-scoreboard

./: .docker-compose.yml.swp  Cargo.toml  checks.yaml  docker-compose.yml  flag1.txt  flag2.txt  flag3.txt  teams.yaml
prometheus/: prometheus.yml
src/: main.rs
